<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movie"
            android:icon="@drawable/ic_baseline_local_movies_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_ticket_sales" />
        <item
            android:id="@+id/nav_list_admin"
            android:icon="@drawable/ic_baseline_person_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_admin_list" />
        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_baseline_directions_bus_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_buses" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_passenger"
            android:icon="@drawable/ic_baseline_airline_seat_recline_extra_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_passengers" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_baseline_event_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:fontFamily="sans-serif-condensed-medium"
            android:title="@string/menu_settings" />
    </group>
</menu>