<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:id="@+id/bottom_sheet_window"
    >

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/textStyle"
        android:text="@string/passenger_info_label"/>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline_color"/>


    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        style="@style/editTextStyle"
        android:background="@drawable/edit_text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:padding="10dp"
        style="@style/editTextStyle"
        android:background="@drawable/edit_text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/email_hint"
        style="@style/editTextStyle"
        android:textColor="@color/delete_btn_corner"
        android:background="@drawable/edit_text"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/place_label"
                />

            <EditText
                android:id="@+id/user_place"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                style="@style/editTextStyle"
                android:textAlignment="center"
                android:textColor="#000"
                android:background="@drawable/edit_text"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/price_label"
                />
            <EditText
                android:id="@+id/user_price"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="10dp"
                style="@style/editTextStyle"
                android:textAlignment="center"
                android:background="@drawable/edit_text"
                android:layout_marginTop="10dp"/>


        </LinearLayout>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <Button
                style="@style/btn_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/popup_window_btn"
                android:textColor="#FFF"
                android:text="@string/update_btn_label"/>
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="10dp">
           <Button
               style="@style/btn_position"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="#FFF"
               android:background="@drawable/popup_window_btn"
               android:text="@string/send_btn_label"
               />
       </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center">
        <Button
            android:id="@+id/cancel_operation"
            style="@style/btn_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:background="@drawable/popup_window_btn"
            android:text="@string/label"
            />
    </LinearLayout>

</LinearLayout>